--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <section>
+        <h1>Calculate</h1>
+      </section>
+      <form>
+        <input type="number" id="firstNumber" /> +
+        <input type="number" id="secondNumber" />
+        <button type="submit" id="submit">Submit</button>
+      </form>
+      <div id="result">Result is:</div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
